--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
