--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,21 @@ node_modules
 # local env files
 .env*.local
 .env
+
+node_modules
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
+
+# Hardhat Ignition default folder for deployments against a local node
+ignition/deployments/chain-31337
