--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ethers": "^5.7.2",
     "next": "14.2.14",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "thirdweb": "^5.61.5"
