--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.15",
     "@thirdweb-dev/react": "^4.9.4",
     "@thirdweb-dev/sdk": "^4.0.99",
     "ethers": "^5.7.2",
@@ -17,7 +18,8 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "thirdweb": "^5.61.5"
+    "react-query": "^3.39.3",
+    "thirdweb": "^5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
