--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@thirdweb-dev/react": "^4.9.4",
     "@thirdweb-dev/sdk": "^4.0.99",
     "ethers": "^5.7.2",
+    "ipfs-http-client": "^60.0.1",
     "next": "14.2.14",
     "react": "^18",
     "react-confetti": "^6.1.0",
